@@ -1,4 +1,4 @@
-CHANGES.txt - 04/30/2003
+CHANGES.txt - 07/31/2003
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.24
@@ -45,6 +45,8 @@ CHANGES IN HTMLDOC v1.8.24
 	  enabled.
 	- HTMLDOC generated an incorrect image mask for some
 	  images.
+	- The first page of each chapter did not use the custom
+	  page number if it was placed inside the heading.
 
 
 CHANGES IN HTMLDOC v1.8.23
